@@ -1,3 +1,9 @@
+2002/09/26  fadden
+    - progress updater now shows "analyzing" for scan pass of SQ
+
+2002/09/23  fadden
+    - ran the code through valgrind; found and fixed some minor bugs
+
 2002/09/20  fadden
     - pulled the sources out and started fiddling with them again
     - changed hard tabs to spaces
